syntax = "proto3";

option go_package = "nem/idl/gen";
option java_multiple_files = true;
option java_package = "github.com/nuzur/nem";
option java_outer_classname = "FieldTypeSlugConfig";

package nem;



message FieldTypeSlugConfig {  
    int64 min_size = 1;
    int64 max_size = 2;
    string regex_validation = 3;
    repeated string based_on_field_uuids = 4;    
}
